//Configured the expo and react navigation
/*Modified icon and splash, organized the folders for pages and starting the configuration of the routes*/

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -11,11 +11,11 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/iconHero.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splashHero.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#E02041"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
